<resources>
    <string name="crateClassVlaue">我要开班</string>
    <string name="bodyGameVlaue">体管赛</string>
    <string name="crateClassClassNameValue">班级名称：</string>
    <string name="crateClassTimeValue">班级周期：</string>
    <string name="crateClassChooseValue">请选择</string>
    <string name="app_name">莱聚+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="activity_listview">AdapterTest</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="dialog_loading">Loading...</string>
    <string name="title_activity_zlistview">ZListView</string>
    <string name="title_activity_validate">ValidateActivity</string>
    <string name="app_sure">确定</string>
    <string name="app_exit">退出</string>
    <string name="app_cancel">取消</string>
    <string name="login_out_title">温馨提示</string>
    <string name="warning">警告</string>
    <string name="warning_value">您确定从班级列表中移除该助教吗？</string>
    <string name="login_out_message">确定退出该账号吗？</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="phoneNum">手机号码</string>
    <string name="password">密码</string>
    <string name="passwordReg">密码(字母+数字，6~16位)</string>
    <string name="newpasswordReg">新密码(字母+数字，6~16位)</string>
    <string name="psdReg">(?![^a-zA-Z]+$)(?!\\D+$).{6,16}</string>
    <string name="forgetPsd">
        <u>忘记密码?</u>
    </string>
    <string name="ZQS">
        <u>本人已仔细阅读 《康宝莱使用知情书》</u>
    </string>
    <string name="neterror">服务器异常</string>
    <string name="newPasswordNull">请输入新密码</string>
    <string name="oldPasswordNull">请输入原密码</string>
    <string name="nameNull">请输入姓名</string>
    <string name="resetpasswordNull">请输入确认密码</string>
    <string name="resetNewpasswordNull">请输入确认新密码</string>
    <string name="phoneValidateNull">请输入手机号码</string>
    <string name="phoneValidateNullLogin">请输入手机号码</string>
    <string name="passwordValidateNull">请输入密码</string>
    <string name="phoneValidate">请输入正确的手机号码</string>
    <string name="passwordValidate">密码不符合规则(字母+数字，6~16位)</string>
    <string name="npasswordValidate">新密码不符合规则(字母+数字，6~16位)</string>
    <string name="termValidate">必须遵循该条款</string>
    <string name="identiftValidtae">请输入验证码</string>
    <string name="phonePattern">^1[3456789]\\d{9}$</string>
    <string name="identifyValidateMsg">验证码错误</string>
    <string name="identifyAsNull">请获取验证码</string>
    <string name="confirmPassword">两次密码不一致</string>
    <string name="confirmPasswordNull">请输入确认密码</string>
    <string name="psdResetY">重置成功</string>
    <string name="psdResetN">重置失败</string>
    <string name="home">主页</string>
    <string name="healthy">健康圈</string>
    <string name="contact">通讯录</string>
    <string name="healthyRecord">健康记录</string>
    <string name="mine">我的</string>
    <string name="aa">&lt;2016年6月6日&gt;</string>
    <string name="visitor">游客模式</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="repassword">确认密码</string>
    <string name="protocol">
        <u>《莱聚+用户协议和隐私保护条款》</u>
    </string>
    <string name="next">下一步</string>
    <string name="sendIdentify">发送验证码</string>
    <string name="readeAndAgress">我已阅读并同意遵守</string>
    <string name="inputNewPassword">输入新密码</string>
    <string name="reNewPassword">确认新密码</string>
    <string name="className">请输入班级名称</string>
    <string name="classTime">请输入时间段</string>
    <string name="allClass">选择班级</string>
    <string name="customerServiceCount">服务顾客数:</string>
    <string name="retestValue">顾客复测率:</string>
    <string name="totalValue">服务顾客减重总斤数:</string>
    <string name="contactList">手机通讯录邀请</string>
    <string name="selectMonthValue">选择月份：</string>
    <string name="selectGradeValue">选择组别：</string>
    <string name="gameValue">减重龙虎榜</string>
    <string name="rnumValue">排行</string>
    <string name="beforeWightValue">减重前</string>
    <string name="afterWeightValue">减重后</string>
    <string name="loseWeightValue">共减重</string>
    <string name="userNameValue">姓名</string>
    <string name="fragmentRenzheng">身份认证</string>
    <string name="fragmentSetting">系统设置</string>
    <string name="fragmentResetPassword">重置密码</string>
    <string name="fragmentzx">注销账号</string>
    <string name="zigezhenghao">资格证号</string>
    <string name="accountValidateNull">请输入资格证号</string>
    <string name="studentHonorJZ">减重奖章</string>
    <string name="studentHonorFC">复测奖章</string>
    <string name="studentHonorYGJ">月冠军</string>
    <string name="studentHonorsTAR">全国减重明星奖章</string>
    <string name="CounselorA">体管赛</string>
    <string name="CounselorB">往期回顾</string>
    <string name="CounselorC">新学员录入</string>
    <string name="CounselorD">复测</string>
    <string name="CounselorE">当前进度</string>
    <string name="CounselorF">荣誉榜</string>
    <string name="CounselorG">大赛赛况</string>
    <string name="CounselorH">TIPS</string>
    <string name="CounselorI">助教管理</string>
    <string name="CounselorJ">消息中心</string>
    <string name="AuditBarT">复测审核</string>
    <string name="AuditBarR">确认</string>
    <string name="sendDynamic">发布动态</string>
    <string name="inviteTutor">邀请助教</string>
    <string name="inviteStudent">邀请学员</string>
    <string name="gamestA">基本数据</string>
    <string name="gamestB">上传照片</string>
    <string name="gamestD">减重故事</string>
    <string name="gamestE">成绩单</string>
    <string name="tipsgamestI">TIPS</string>
    <string name="gamestC">复测</string>
    <string name="gamestF">荣誉榜</string>
    <string name="gamestG">大赛赛况</string>
    <string name="gamestH">加入跑团</string>
    <string name="phoneOr">手机号码</string>
    <string name="assistantManage">助教管理</string>
    <string name="assistantDetail">助教详情</string>
    <string name="applyAssistant">助教申请</string>
    <string name="createClass">创建班级</string>
    <string name="joinGame">参赛邀请</string>
    <string name="review">往期回顾</string>
    <string name="message1">体管赛小助手</string>
    <string name="message3">参赛邀请</string>
    <string name="fcRemind">复测提醒</string>
    <string name="joinGameP">本人已仔细阅读</string>
    <string name="joinGameR">《康宝莱使用知情书》</string>
    <string name="joinGameQ">请仔细阅读且勾选《康宝莱使用知情书》</string>
    <string name="old_password">原密码</string>
    <string name="version_name">版本信息</string>
    <string name="version">V1.0.0 版本</string>
    <string name="aboutMe1">莱聚+，康宝莱专业体重管理与运动社交APP，一起“莱”感受积极健康生活方式的魅力吧！</string>
    <string name="aboutMe2">管理体重，监测包含脂肪含量在内的17项身体健康指数</string>
    <string name="aboutMe3">多维数据，常年历史记录，跟踪自身体型、健康变化</string>
    <string name="aboutMe4">参加体重管理挑战赛，开班减重+教练指导，快乐享“瘦”</string>
    <string name="aboutMe5">跑步轨迹与步数记录，了解你的运动燃卡量</string>
    <string name="aboutMe6">加入小康康i跑团，参与丰富活动，发起PK挑战，找到志同道合的小伙伴</string>
    <string name="aboutMe7">打造健康圈，分享你的心得和进步</string>
    <string name="naixi">健康奶昔餐：PK结束后，输家必须亲手为赢家调制一杯美味奶昔，记得选用对方喜爱的口味和食材哦。</string>
    <string name="naixicao">摇摇奶昔操：PK结束后，输家必须在赢家面前跳一遍完整的摇摇奶昔操，动作可要标准哟！</string>
    <string name="naixi1">PK结束后，输家必须亲手为赢家调制一杯美味奶昔，记得选用对方喜爱的口味和食材哦。</string>
    <string name="naixicao1">PK结束后，输家必须在赢家面前跳一遍完整的摇摇奶昔操，动作可要标准哟！</string>
    <string name="pkchoumatip">来说说你想要获得的礼物吧！当然不要忘记了，它可能是你想要送出去的东西哦！</string>
    <string name="noclass">您尚未加入班级，可以搜索加入班级\n或者创建一个新班级</string>
    <string name="noclass1">您尚未加入班级，可以搜索加入班级</string>
    <string name="sptext"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Go to previous</string>
    <string name="next1">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="zhiqingshu"><u>本人已阅读《康宝莱使用知情书》</u></string>
    <string name="removing_friendMsg">正在移除好友消息</string>
    <string name="rank_number_test">1</string>
    <string name="rank_group_name_test">组</string>
    <string name="rank_trainer_name_test">小王小王小王小王小王</string>
    <string name="rank_trainer_name_test1">(教练)</string>
    <string name="rank_per_number1_test">20</string>
    <string name="rank_per_number2_test">%</string>
    <string name="rank_per_test">人均减重比</string>
    <string name="honorRank">荣誉榜</string>
    <string name="rule">规则说明</string>
    <string name="weight_per">人均变化比</string>
    <string name="fat_per">人均变化比</string>
    <string name="physical_manage1">第一体管周</string>
    <string name="physical_manage2">第二体管周</string>
    <string name="physical_manage3">第三体管周</string>
    <string name="physical_manage4">第四体管周</string>
    <string name="physical_manage5">第五体管周</string>
    <string name="physical_manage6">第六体管周</string>
    <string name="physical_manage7">第七体管周</string>
    <string name="physical_manage8">第八体管周</string>
    <string name="physical_manage9">第九体管周</string>
    <string name="physical_manage10">第十体管周</string>
    <string name="physical_manage11">第十一体管周</string>
    <string name="physical_manage12">第十二体管周</string>
    <string name="lose_weight">减重比</string>
    <string name="lose_weight_ratio">减重</string>
    <string name="lose_fat">减脂比</string>
    <string name="lose_fat_ratio">减脂</string>
    <string name="lose_weight_per">减重比</string>
    <string name="lose_fat_per">减脂比</string>
    <string name="physical_manage_month1">第一体馆月</string>
    <string name="physical_manage_month2">第二体馆月</string>
    <string name="physical_manage_month3">第三体馆月</string>
    <string name="et_chu_text">初始体重必填项，请选择</string>
    <string name="group_ranking">组内排名</string>
    <string name="past_ranking">往期榜单</string>
    <string name="waiting">虚位以待</string>
    <string name="init_weight">初始:%1$s斤</string>
    <string name="init_fat">初始:%1$s%%</string>
    <string name="ranking_date">榜单日期: </string>
    <string name="title_ranking_group">组内排名(%1$s)</string>
    <string name="week_ranking">本周第%1$s名</string>
    <string name="month_ranking">本月第%1$s名</string>
    <string name="title_group_total">组内排名(总排名)</string>
    <string name="please_close_class">解散班级群(请先关闭班级)</string>
    <string name="please_dismiss_class">解散班级群</string>
    <string name="conversation_starting">网络异常，请重新登录后再试</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>