<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.login.view.LoginActivity">

    <include layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:hint="@string/phoneNum"
            android:singleLine="true"
            android:paddingLeft="5dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true"
            android:paddingLeft="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="登录"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginRight="-50dp"
                android:background="@drawable/border"
                />
            <TextView
                android:id="@+id/tv_forgetpsd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_columnSpan="1"
                android:layout_gravity="fill"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/forgetPsd"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
